--- a/Congratulator/src/main/res/layout/dismiss_blinking_tv.xml
+++ b/Congratulator/src/main/res/layout/dismiss_blinking_tv.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/dismiss"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center_horizontal"
-    android:gravity="center_horizontal"
-    android:textSize="20sp"
-    android:text="@string/congratulations_content_default"/>
+    android:layout_marginBottom="30dp"
+    android:text="@string/congratulations_dismiss_default"/>
