--- a/Congratulator/src/main/res/layout/title_tv.xml
+++ b/Congratulator/src/main/res/layout/title_tv.xml
@@ -4,8 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:maxLines="1"
+    android:layout_gravity="center_horizontal"
     android:gravity="center"
     android:textSize="50sp"
-    android:text="@string/congratulations_title_default">
-
-</com.nidaappdev.congratulator.AutoResizeTextView>
+    android:text="@string/congratulations_title_default"/>
